--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-  "type": "module",
   "name": "pormetro",
   "version": "1.0.0",
   "description": "",
   "main": "mock.js",
+  "type": "module",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "mocha test.js",
+    "test": "jest",
     "start": "node server.js"
   },
-  
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "mongoose": "^8.1.1"
   },
   "devDependencies": {
-    "chai": "^5.0.3",
-    "chai-http": "^4.4.0",
-    "mocha": "^10.2.0"
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4"
   }
 }
